test/corpus/request.txt
===
Simple GET
===

GET https://example.org/api/dogs

---

(source_file (request (method) (url)))


===
Simple GET with comment
===

GET https://example.org/api/dogs # Hello

---

(source_file (request (method) (url) (comment)))

===
simple GET with header
===

GET https://example.org/api/dogs
user-agent: my user agent

---

(source_file (request (method) (url) (header (key) (value))))

===
simple GET with header multiple headers
===

GET https://example.org/api/dogs
user-agent: my user agent
Content-Type: application/json

---

(source_file 
 (request (method) (url)
  (header (key) (value)) 
  (header (key) (value))))
